--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceFundRank/PerformanceFundReturn.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceFundRank/PerformanceFundReturn.cshtml
@@ -51,7 +51,7 @@
 				<div class="c-cardTable__content">
 					@if (item.CurrencyName != null)
 					{
-						<a href="#" class="o-link">@item.CurrencyName </a>
+						<a href="#popupCurrencyWebSite" class="o-link" data-popup="true">@item.CurrencyName </a>
 					}
 					else
 					{
