--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/TabCards/Tab3Card.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/TabCards/Tab3Card.cshtml
@@ -74,7 +74,7 @@
             <div class="l-flex__item">
                 <div class="c-box u-shadow-animation">
                     <div class="c-cardFund">
-                        <a href="@fundCardUrl" class="c-cardFund__name u-ellipsis-2">
+                        <a href="@fundCardUrl" class="c-cardFund__name u-ellipsis-2" target="_blank">
                             @fundCardName
                         </a>
                         <div class="c-cardFund__trend">
