--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/TabCards/TabCard.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/TabCards/TabCard.cshtml
@@ -35,7 +35,7 @@
                                     <div class="o-charts o-charts--@chartStyle" data-chart="mini" fundCard-code="@fundCardAttr"></div>
                                 </div>
                             </div>
-                            <a href="@fundCardUrl" class="c-cardFund__name u-ellipsis-2">
+                            <a href="@fundCardUrl" class="c-cardFund__name u-ellipsis-2" target="_blank">
                                 @fundCardName
                             </a>
                         </div>
