Update: 移除_Pagination.cshtml 多餘Script、修正ajax url 路徑名稱

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
@@ -464,7 +464,7 @@
 
             // 商品列表
             $.ajax({
-                url: '@ClientRoute.GenerateUrl(this, "StructuredProduct", "GetAllStructuredProducts")',
+                url: '@ClientRoute.GenerateUrl(this, "StructuredProduct", "GetStructuredProducts")',
                 type: 'POST',
                 data: { datasourceIdStr: datasourceId },
                 success: function (data) {
