--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
@@ -135,23 +135,15 @@
                     <div class="l-pageHeader__action u-hidden-embed">
                         <ul class="l-pageWallet">
                             <li class="l-pageWallet__item">
-                                <a href="javascript:;" data-focus
-                                   data-type="@InvestTypeEnum.Fund" data-id="@BasicData.ProductCode" data-name="@BasicData.ProductName"
-                                   class="o-statusBtn o-statusBtn--like" data-eh="focus-init,focus-click"
-                                   data-after="關注" data-msg="加入關注|取消關注" data-ia="true" data-add="false"></a>
+                                @Html.FocusButton(null, BasicData.ProductCode, BasicData.FundName, InvestTypeEnum.Fund, false)
                             </li>
                             <li class="l-pageWallet__item">
-                                <a href="javascript;" data-compare
-                                   data-type="@InvestTypeEnum.Fund" data-id="@BasicData.ProductCode" data-name="@BasicData.ProductName"
-                                   data-eh="compare-init,compare-click" class="o-statusBtn o-statusBtn--compare "
-                                   data-after="比較" data-msg="加入比較|取消比較" data-ia="true" data-add="false"></a>
+                                @Html.CompareButton(null, BasicData.ProductCode, BasicData.FundName, InvestTypeEnum.Fund, false)
                             </li>
                             @if (BasicData.OnlineSubscriptionAvailability.ToBoolean())
                             {
                                 <li class="l-pageWallet__btn">
-                                    <a href="#" data-eh="subscription-init,subscription-click"
-                                       eh-subscription-init class="o-fixedBtn" data-popup="true"
-                                       data-type="@InvestTypeEnum.Fund" data-id="@BasicData.ProductCode">申購</a>
+                                    @Html.SubscriptionButton(null, BasicData.ProductCode, InvestTypeEnum.Fund, false)
                                 </li>
                             }
                         </ul>
@@ -216,7 +208,11 @@
                         </div>
                         <div class="c-zebraList__item">
                             <div class="c-zebraList__title">計價幣別 <a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true">i</a></div>
-                            <div class="c-zebraList__content"><span class="t-bold"><a href="#popupCurrencyWebSite" class="o-link" data-popup="true">@BasicData.ValuationCurrency.CheckNullOrEmptyString()</a></span></div>
+                            <div class="c-zebraList__content">
+                                <span class="t-bold">
+                                    @Html.CurrencyLink(null, BasicData.ValuationCurrency)
+                                </span>
+                            </div>
                         </div>
                         <div class="c-zebraList__item">
                             <div class="c-zebraList__title">風險報酬等級</div>
@@ -2807,8 +2803,9 @@
             {
                 fundId : fundId
             },
+            beforeSend: function () {window.loading('show'); },
             success: function (result) {
-                if (result && result.resultSet.result.length > 0) {
+                if (result && result.resultSet.result.length > 0) {                   
                     const set = new Set();
                     const filterData = result.resultSet.result.filter(item => !set.has(item.v5) ? set.add(item.v5) : false);
                     $.each(filterData, function (index, value) {
@@ -2831,9 +2828,11 @@
                 } else {
                     $('#fundSelect').find("select").addClass('u-hidden');
                 }
+                window.loading('hide');
             },
             error: function (err) {
-              console.log(err) },
+                console.log(err);
+                window.loading('hide');},
         });
 
         //國內外基金-PDF
