--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -57,22 +57,23 @@
 
         EventHandler.AddExec('compare-init', function (self) {
             let $this = $(self);
-            let id = $this.data('id');
+            let id = self.getAttribute('eh-compare-id');
             let compare = store.get('compare');
             if (checkItemExists('compare', id)) {
                 $this.addClass('is-active');
-                self.setAttribute('data-add', true);
+                self.setAttribute('eh-compare-add', true);
             };
 
             if (compare.length == 7) {
-                if (self.getAttribute('data-add').toString() == "false")
+                if (self.getAttribute('eh-compare-add').toString() == "false")
                 {
                     self.setAttribute('href', '#popupCompareMax');
                     self.setAttribute('data-popup', true);
                     self.removeAttribute('data-ia');
                     self.removeAttribute('data-msg');
-                     $(self).off('click.interactive');
-                     $(self).magnificPopup();
+                    $(self).off('click.interactive');
+                    $(self).removeData('plugin_interactive');
+                    $(self).magnificPopup();
                 }
             }
         });
@@ -80,33 +81,32 @@
             let $this = $(this);
             $this.css('visibility', 'hidden');
             setTimeout(() => $this.css('visibility', ''), 750);
-            let id = $this.data('id');
-            let name = $this.data('name');
-            let type = $this.data('type').toLowerCase();
+            let id = this.getAttribute('eh-compare-id');
+            let name = this.getAttribute('eh-compare-name');
+            let type = this.getAttribute('eh-compare-type').toLowerCase();
             let obj = new CompareObj(id, type, name);
             let compare = store.get('compare');
-            if (this.getAttribute('data-add').toString() == "false") {
+            if (this.getAttribute('eh-compare-add').toString() == "false") {
                 if (compare.length < 7) {
                     addItem('compare', obj);
-                    this.setAttribute('data-add', true);
+                    this.setAttribute('eh-compare-add', true);
                     if (compare.length == 6) {
-                        $('[data-compare][data-add=false]').each(function (idx,ele) {
+                        $('[eh-compare][eh-compare-add=false]').each(function (idx, ele) {
                                    ele.setAttribute('href', '#popupCompareMax');
                                     ele.setAttribute('data-popup', true);
                                     ele.removeAttribute('data-ia');
                                     ele.removeAttribute('data-msg');
                                     $(ele).off('click.interactive');
+                                    $(ele).removeData('plugin_interactive');
                                     $(ele).magnificPopup();
-
                         })
                     }
                 }
             } else {
                 removeItem('compare', obj);
-                this.setAttribute('data-add', false);
+                this.setAttribute('eh-compare-add', false);
                 if(compare.length == 7){
-               $('[data-compare][data-add=false]').each(function (idx,ele)
-                {
+                    $('[eh-compare][eh-compare-add=false]').each(function (idx, ele) {
                         ele.setAttribute('href', 'javascript:;');
                         ele.removeAttribute('data-popup');
                         ele.setAttribute('data-ia', 'true');
@@ -121,40 +121,40 @@
 
         EventHandler.AddExec('focus-init', function (self) {
             let $this = $(self);
-            let id = $this.data('id');
+            let id = self.getAttribute('eh-focus-id');
             if (checkItemExists('focus', id)) {
                 $this.addClass('is-active');
-                self.setAttribute('data-add', true);
+                self.setAttribute('eh-focus-add', true);
             };
         });
         EventHandler.AddClick('focus-click', function () {
             let $this = $(this);
             $this.css('visibility', 'hidden');
             setTimeout(() => $this.css('visibility', ''), 750);
-            let id = $this.data('id');
-            let name = $this.data('name');
-            let type = $this.data('type').toLowerCase();
+            let id = this.getAttribute('eh-focus-id');
+            let name = this.getAttribute('eh-focus-name');
+            let type = this.getAttribute('eh-focus-type').toLowerCase();
             let obj = new CompareObj(id, type, name);
-            if (this.getAttribute('data-add').toString() == "false") {
+            if (this.getAttribute('eh-focus-add').toString() == "false") {
                     addItem('focus', obj);
-                    this.setAttribute('data-add', true);
+                this.setAttribute('eh-focus-add', true);
             } else {
                 removeItem('focus', obj);
-                this.setAttribute('data-add', false);
+                this.setAttribute('eh-focus-add', false);
             }
         });
 
           EventHandler.AddExec('subscription-init',function(self){
-              let $this = $(self);
+              let $this = self;
               let single = document.getElementById("subscriptionSingle");
               let regular = document.getElementById("subscriptionRegular");
                 @if (!FcbMemberHelper.CheckMemberLogin())
                 {
-                    @: $this.attr("href","#popupLogin");
+                    @: $this.setAttribute("href","#popupLogin");
                 }
                 else
                 {
-                    @: $this.attr("href", "#popupPurchase");
+                    @: $this.setAttribute("href", "#popupPurchase");
                 }
 
 
@@ -182,21 +182,20 @@
           {
                   let val = store.get('MobilePlatform');
               if (val == "firste") {
-                  $('input[data-name="firste"]').prop('checked', true);
-                  $('input[data-name="firste"]').click();
+                  $('input[data-name="firste"]','#popupPurchase').prop('checked', true);
+                  $('input[data-name="firste"]').trigger('click');
               } else {
-                  $('input[data-name="ileo"]').prop('checked', true);
+                  $('input[data-name="ileo"]','#popupPurchase').prop('checked', true);
 
-                  $('input[data-name="ileo"]').click();
+                  $('input[data-name="ileo"]','#popupPurchase').trigger('click');
               }
           }else{
-                  $('input[data-name="firste"]').click();
+                  $('input[data-name="firste"]','#popupPurchase').trigger('click');
           }
           });
 
-            EventHandler.AddClick('subscription-click', function (e,self) {
-                let $this = $(this);
-                let id = $this.data('id');
+            EventHandler.AddClick('subscription-click', function () {
+                let id = this.getAttribute('eh-subscription-id');
                 let lastId = store.get("lastsubscription");
                 let single = document.getElementById("subscriptionSingle");
                 let regular =  document.getElementById("subscriptionRegular");
