--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/GlobalIndexDetailWrap.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/GlobalIndexDetailWrap.cshtml
@@ -192,13 +192,13 @@
                         <div class="l-flex__item" data-chart="kLine">
                             <div class="c-empty">
                                 <div class="c-empty__img">
-                                    <img src="./../../themes/images/lions/lion-keyword.svg" alt="">
+                                    <img src="~/themes/images/lions/lion-keyword.svg" alt="">
                                 </div>
                                 <div class="c-empty__desc">沒有資料</div>
                             </div>
                             <div class="c-error">
                                 <div class="c-error__img">
-                                    <img src="./../../themes/images/lions/lion-construction.svg" alt="">
+                                    <img src="~/themes/images/lions/lion-construction.svg" alt="">
                                 </div>
                                 <div class="c-error__desc">不好意思~伺服器出了一點小狀況。請您晚點再來！</div>
                             </div>
@@ -357,13 +357,13 @@
                                 </table>
                                 <div class="c-empty" empty-error-name="fundPrice-empty">
                                     <div class="c-empty__img">
-                                        <img src="./../../themes/images/lions/lion-keyword.svg" alt="">
+                                        <img src="~/themes/images/lions/lion-keyword.svg" alt="">
                                     </div>
                                     <div class="c-empty__desc">沒有資料</div>
                                 </div>
                                 <div class="c-error" empty-error-name="fundPrice-error">
                                     <div class="c-error__img">
-                                        <img src="./../../themes/images/lions/lion-construction.svg" alt="">
+                                        <img src="~/themes/images/lions/lion-construction.svg" alt="">
                                     </div>
                                     <div class="c-error__desc">不好意思~伺服器出了一點小狀況。請您晚點再來！</div>
                                 </div>
@@ -498,13 +498,13 @@
                                 </table>
                                 <div class="c-empty" empty-error-name="ETFPrice-empty">
                                     <div class="c-empty__img">
-                                        <img src="./../../themes/images/lions/lion-keyword.svg" alt="">
+                                        <img src="~/themes/images/lions/lion-keyword.svg" alt="">
                                     </div>
                                     <div class="c-empty__desc">沒有資料</div>
                                 </div>
                                 <div class="c-error" empty-error-name="ETFPrice-error">
                                     <div class="c-error__img">
-                                        <img src="./../../themes/images/lions/lion-construction.svg" alt="">
+                                        <img src="~/themes/images/lions/lion-construction.svg" alt="">
                                     </div>
                                     <div class="c-error__desc">不好意思~伺服器出了一點小狀況。請您晚點再來！</div>
                                 </div>
@@ -641,13 +641,13 @@
                                 </table>
                                 <div class="c-empty" empty-error-name="globalIndex-empty">
                                     <div class="c-empty__img">
-                                        <img src="./../../themes/images/lions/lion-keyword.svg" alt="">
+                                        <img src="~/themes/images/lions/lion-keyword.svg" alt="">
                                     </div>
                                     <div class="c-empty__desc">沒有資料</div>
                                 </div>
                                 <div class="c-error" empty-error-name="globalIndex-error">
                                     <div class="c-error__img">
-                                        <img src="./../../themes/images/lions/lion-construction.svg" alt="">
+                                        <img src="~/themes/images/lions/lion-construction.svg" alt="">
                                     </div>
                                     <div class="c-error__desc">不好意思~伺服器出了一點小狀況。請您晚點再來！</div>
                                 </div>
