Update: 更新麵包屑，第一二層不顯示連結

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Navigation/Breadcrumbs.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Navigation/Breadcrumbs.cshtml
@@ -20,7 +20,7 @@
                     else
                     {
                         <li class="o-breadcrumb__item">
-                            @if (string.IsNullOrEmpty(node.Link.Url) || ix == 3)
+                            @if (string.IsNullOrEmpty(node.Link.Url) || ix == 2 || ix == 3)
                             {
                                 <span class="o-breadcrumb__link">@node.GetBestLinkText()</span>
                             }
